Closest Equal Element Queries